--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Blog front-end</title>
+  <link rel="stylesheet" href="style-home.css?50">
+
+  
+</head>
+
+<body>
+  <header>
+    <h1 class="titulo-principal">Blog front-end</h1>
+  </header>
+     <title>Blog front-end</title>
+
+</body>
+
+
+</html>
+
+
+
+</html>
