--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Blog front-end</title>
-  <link rel="stylesheet" href="style-home.css?50">
-
-  
+  <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
   <header>
-    <h1 class="titulo-principal">Blog front-end</h1>
+  
   </header>
-     <title>Blog front-end</title>
+<div class="logo">
 
+  <img src="img.png" class="imagemlogo">
+  
+</div>
+
+
+     <title>Blog front-end</title>
+     <img src="img/Background.png" class="background">
 </body>
 
 
