--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
   <header>
   
   </header>
-<div class="logo">
+<div class="click-logo">
 
-  <img src="img.png" class="imagemlogo">
-  
+  <a href="https://jvnecle.github.io/Plus/" target="_blank">
+    <img src="imagem.png">
+  </a>
 </div>
-
-
-     <title>Blog front-end</title>
-     <img src="img/Background.png" class="background">
-       <a href="https://jvnecle.github.io/Plus/" target="_blank">Clique aqui</a>
 
   
 </body>
