--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
   <header>
   
   </header>
-<div class="click-logo">
-
-  <a href="https://jvnecle.github.io/Plus/" target="_blank">
-    <img src="imagem.png">
-  </a>
-</div>
+    <section class="container principal"> 
+    
+    <div class="caixa"></div>
+    </section>
 
   
-</body>
+  </body>
 
 
 </html>
