--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </div>
         
         <div class="icone">
-          <a href="https://www.alura.com.br/" target="_blank" >
+          <a href="https://www.canva.com/design/DAGJy8km_UM/o5klqA7e7qDsP-4zXj0fXA/view?utm_content=DAGJy8km_UM&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank" >
           <img src="O_que_é_Front-End__2_-removebg-preview.png">
         </a>
         </div>
         
         <div class="icone">
-          <a href="https://www.canva.com/design/DAGIuDWGoxc/vA5F0gN_4ldyBF3YRR9qYg/view?utm_content=DAGIuDWGoxc&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank" class="icone_3">
+          <a href="https://www.canva.com/design/DAGMaufrTlw/ZBMJqm5BYiIXxstV_eg6LQ/view?utm_content=DAGMaufrTlw&utm_campaign=designshare&utm_medium=link&utm_source=editorium=link&utm_source=editor" target="_blank" class="icone_3">
           <img src="O_que_é_Front-End__3_-removebg-preview.png" >
         </a>
         </div>
