--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="icone">
-          <a href="https://www.canva.com/design/DAGMaufrTlw/ZBMJqm5BYiIXxstV_eg6LQ/view?utm_content=DAGMaufrTlw&utm_campaign=designshare&utm_medium=link&utm_source=editorium=link&utm_source=editor" target="_blank" class="icone_3">
+          <a href="https://oquefazemosfrontend.my.canva.site/outras-materias" target="_blank" class="icone_3">
           <img src="O_que_é_Front-End__3_-removebg-preview.png" >
         </a>
         </div>
