--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <div class="icone">
-          <a href="https://www.canva.com/design/DAGJy8km_UM/o5klqA7e7qDsP-4zXj0fXA/view?utm_content=DAGJy8km_UM&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank" >
+          <a href="https://oquefazemosfrontend.my.canva.site/" target="_blank" >
           <img src="O_que_é_Front-End__2_-removebg-preview.png">
         </a>
         </div>
